LPD-76298 update rest configs
