# modules/apps/launch/launch-rest-impl/src/main/java/com/liferay/launch/rest/internal/odata/entity/v1_0/LaunchSetEntityModel.java
@@ -1,0 +1,49 @@
+/**
+ * SPDX-FileCopyrightText: (c) 2026 Liferay, Inc. https://liferay.com
+ * SPDX-License-Identifier: LGPL-2.1-or-later OR LicenseRef-Liferay-DXP-EULA-2.0.0-2023-06
+ */
+
+package com.liferay.launch.rest.internal.odata.entity.v1_0;
+
+import com.liferay.portal.kernel.search.Field;
+import com.liferay.portal.odata.entity.DateTimeEntityField;
+import com.liferay.portal.odata.entity.EntityField;
+import com.liferay.portal.odata.entity.EntityModel;
+import com.liferay.portal.odata.entity.IntegerEntityField;
+import com.liferay.portal.odata.entity.StringEntityField;
+
+import java.util.Map;
+
+/**
+ * @author David Truong
+ */
+public class LaunchSetEntityModel implements EntityModel {
+
+	public LaunchSetEntityModel() {
+		_entityFieldsMap = EntityModel.toEntityFieldsMap(
+			new DateTimeEntityField(
+				"dateCreated",
+				locale -> Field.getSortableFieldName(Field.CREATE_DATE),
+				locale -> Field.CREATE_DATE),
+			new DateTimeEntityField(
+				"dateModified",
+				locale -> Field.getSortableFieldName(Field.MODIFIED_DATE),
+				locale -> Field.MODIFIED_DATE),
+			new DateTimeEntityField(
+				"dateScheduled",
+				locale -> Field.getSortableFieldName("scheduledDate"),
+				locale -> "scheduledDate"),
+			new IntegerEntityField("status", locale -> Field.STATUS),
+			new StringEntityField("description", locale -> Field.DESCRIPTION),
+			new StringEntityField("name", locale -> Field.NAME),
+			new StringEntityField("ownerName", locale -> Field.USER_NAME));
+	}
+
+	@Override
+	public Map<String, EntityField> getEntityFieldsMap() {
+		return _entityFieldsMap;
+	}
+
+	private final Map<String, EntityField> _entityFieldsMap;
+
+}
